--- a/p8105_hw6_wz2630.md
+++ b/p8105_hw6_wz2630.md
@@ -31,6 +31,11 @@ library(tidyverse)
     ## ✖ dplyr::lag()    masks stats::lag()
     ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
 
+``` r
+library(modelr)
+library(knitr)
+```
+
 # Problem 1
 
 (omitted)
@@ -186,6 +191,8 @@ to be outliers based on the histogram.
 
 - Applying log(tmin \* prcp) produced NaNs because log cannot be applied
   to ≤ 0; therefore, I have to explicitly apply to only positive values.
+  Note: there are `sum(is.na(pivot_bootstrap_results[["quantity2"]]))`
+  quantity2 with negative values that we cannot take log of.
 
 - log(beta_hat1\*beta_hat2) = quantity2
 
@@ -196,26 +203,26 @@ to be outliers based on the histogram.
 pivot_bootstrap_results |> 
   summarize(
     ci_lower = quantile(r.squared, 0.025), 
-    ci_upper = quantile(r.squared, 0.975))
+    ci_upper = quantile(r.squared, 0.975)) |>   
+    knitr::kable()
 ```
 
-    ## # A tibble: 1 × 2
-    ##   ci_lower ci_upper
-    ##      <dbl>    <dbl>
-    ## 1    0.889    0.941
+|  ci_lower |  ci_upper |
+|----------:|----------:|
+| 0.8885495 | 0.9406812 |
 
 ``` r
 # quantity2
 pivot_bootstrap_results |> 
   summarize(
     ci_lower = quantile(quantity2, 0.025, na.rm = TRUE), 
-    ci_upper = quantile(quantity2, 0.975, na.rm = TRUE))
+    ci_upper = quantile(quantity2, 0.975, na.rm = TRUE)) |> 
+    knitr::kable()
 ```
 
-    ## # A tibble: 1 × 2
-    ##   ci_lower ci_upper
-    ##      <dbl>    <dbl>
-    ## 1    -8.98    -4.60
+|  ci_lower |  ci_upper |
+|----------:|----------:|
+| -8.981559 | -4.601673 |
 
 **Comments:**
 
@@ -226,4 +233,136 @@ pivot_bootstrap_results |>
 NAs are ommitted.
 
 The 95% confidence interval for r-squared is **(0.889, 0.941)** and for
-log(beta_hat1xbeta_hat2) is **(-8.98, -4.60).**
+log(beta_hat1xbeta_hat2) is **(-8.98, -4.60)**.
+
+# Problem 3
+
+In this problem, you will analyze data gathered to understand the
+effects of several variables on a child’s birthweight.
+
+Load and clean the data for regression analysis (i.e. convert numeric to
+factor where appropriate, check for missing data, etc.).
+
+## load and clean dataset
+
+``` r
+birthweight = 
+  read_csv(file = "./data/birthweight.csv") |> 
+  janitor::clean_names() |> 
+  drop_na() |> 
+  mutate(
+    babysex = as.factor(babysex),
+    frace=recode(frace,"1"="White", "2"="Black", "3"="Asian", "4"="Puerto Rican", '8'="Other", "9"="Unknown"),
+    frace = as.factor(frace),
+    mrace=recode(mrace,"1" = "White", "2" = "Black", "3" = "Asian", "4"="Puerto Rican", "8"="Other"),
+    mrace = as.factor(mrace))
+```
+
+    ## Rows: 4342 Columns: 20
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (20): babysex, bhead, blength, bwt, delwt, fincome, frace, gaweeks, malf...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Propose a regression model for birthweight. This model may be based on a
+hypothesized structure for the factors that underly birthweight, on a
+data-driven model-building process, or a combination of the two.
+Describe your modeling process and show a plot of model residuals
+against fitted values – use add_predictions and add_residuals in making
+this plot.
+
+### full model
+
+``` r
+full_model = 
+  lm(bwt~., data=birthweight) |> 
+  broom::tidy() |> 
+  select(term, estimate, p.value) |> 
+  knitr::kable()
+
+full_model
+```
+
+| term              |      estimate |   p.value |
+|:------------------|--------------:|----------:|
+| (Intercept)       | -6335.5419037 | 0.0000000 |
+| babysex2          |    28.7073088 | 0.0007021 |
+| bhead             |   130.7781455 | 0.0000000 |
+| blength           |    74.9535780 | 0.0000000 |
+| delwt             |     4.1007326 | 0.0000000 |
+| fincome           |     0.2898207 | 0.1065513 |
+| fraceBlack        |    -6.9048265 | 0.9302099 |
+| fraceOther        |   -16.9391876 | 0.8622120 |
+| fracePuerto Rican |   -68.2323428 | 0.3845988 |
+| fraceWhite        |   -21.2361118 | 0.7592729 |
+| gaweeks           |    11.5493872 | 0.0000000 |
+| malform           |     9.7649680 | 0.8900388 |
+| menarche          |    -3.5507723 | 0.2200827 |
+| mheight           |     9.7874130 | 0.3425881 |
+| momage            |     0.7593479 | 0.5344182 |
+| mraceBlack        |   -60.0487959 | 0.4582660 |
+| mracePuerto Rican |    34.9078811 | 0.6663169 |
+| mraceWhite        |    91.3866079 | 0.2039079 |
+| parity            |    95.5411137 | 0.0183069 |
+| pnumlbw           |            NA |        NA |
+| pnumsga           |            NA |        NA |
+| ppbmi             |     4.3537865 | 0.7700173 |
+| ppwt              |    -3.4715550 | 0.1839131 |
+| smoken            |    -4.8543629 | 0.0000000 |
+| wtgain            |            NA |        NA |
+
+### proposed model
+
+``` r
+stepwise_model = 
+  lm(bwt~babysex+bhead+blength+delwt+fincome+gaweeks+ppwt+smoken, data=birthweight) |> 
+  broom::tidy() |> 
+  select(term, estimate, p.value) |> 
+  knitr::kable()
+
+stepwise_model
+```
+
+| term        |     estimate |   p.value |
+|:------------|-------------:|----------:|
+| (Intercept) | -6164.627135 | 0.0000000 |
+| babysex2    |    31.484968 | 0.0002757 |
+| bhead       |   134.615583 | 0.0000000 |
+| blength     |    78.311912 | 0.0000000 |
+| delwt       |     4.006749 | 0.0000000 |
+| fincome     |     1.302863 | 0.0000000 |
+| gaweeks     |    12.793074 | 0.0000000 |
+| ppwt        |    -2.402769 | 0.0000000 |
+| smoken      |    -2.574802 | 0.0000088 |
+
+**Comments:** Variables for the stepwise model were chosen based on
+eliminating those with large p-value scores –though there is not set
+definition, I used those with p-value \< 0.20. It is also reasonable
+that a baby’s birthweight is related to family monthly income, the
+baby’s measurements, gestational age in weeks, mother’s prepregnancy
+weight and whether the mother smoked during pregnancy.
+
+``` r
+#birthweight |>
+#  modelr::add_residuals(full_model) |>
+#  modelr::add_predictions(full_model) |> 
+#  ggplot(aes(x = resid, y = pred)) + 
+#  geom_point()
+```
+
+Compare your model to two others:
+
+- One using length at birth and gestational age as predictors (main
+  effects only)
+
+- One using head circumference, length, sex, and all interactions
+  (including the three-way interaction) between these
+
+Make this comparison in terms of the cross-validated prediction error;
+use crossv_mc and functions in purrr as appropriate.
+
+Note that although we expect your model to be reasonable, model building
+itself is not a main idea of the course and we don’t necessarily expect
+your model to be “optimal”.
