--- a/p8105_hw6_wz2630.md
+++ b/p8105_hw6_wz2630.md
@@ -276,66 +276,86 @@ this plot.
 ### full model
 
 ``` r
-full_model = 
-  lm(bwt~., data=birthweight) |> 
-  broom::tidy() |> 
-  select(term, estimate, p.value) |> 
-  knitr::kable()
-
+full_model = lm(bwt~., data=birthweight)
 full_model
 ```
 
-| term              |      estimate |   p.value |
-|:------------------|--------------:|----------:|
-| (Intercept)       | -6335.5419037 | 0.0000000 |
-| babysex2          |    28.7073088 | 0.0007021 |
-| bhead             |   130.7781455 | 0.0000000 |
-| blength           |    74.9535780 | 0.0000000 |
-| delwt             |     4.1007326 | 0.0000000 |
-| fincome           |     0.2898207 | 0.1065513 |
-| fraceBlack        |    -6.9048265 | 0.9302099 |
-| fraceOther        |   -16.9391876 | 0.8622120 |
-| fracePuerto Rican |   -68.2323428 | 0.3845988 |
-| fraceWhite        |   -21.2361118 | 0.7592729 |
-| gaweeks           |    11.5493872 | 0.0000000 |
-| malform           |     9.7649680 | 0.8900388 |
-| menarche          |    -3.5507723 | 0.2200827 |
-| mheight           |     9.7874130 | 0.3425881 |
-| momage            |     0.7593479 | 0.5344182 |
-| mraceBlack        |   -60.0487959 | 0.4582660 |
-| mracePuerto Rican |    34.9078811 | 0.6663169 |
-| mraceWhite        |    91.3866079 | 0.2039079 |
-| parity            |    95.5411137 | 0.0183069 |
-| pnumlbw           |            NA |        NA |
-| pnumsga           |            NA |        NA |
-| ppbmi             |     4.3537865 | 0.7700173 |
-| ppwt              |    -3.4715550 | 0.1839131 |
-| smoken            |    -4.8543629 | 0.0000000 |
-| wtgain            |            NA |        NA |
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ ., data = birthweight)
+    ## 
+    ## Coefficients:
+    ##       (Intercept)           babysex2              bhead            blength  
+    ##        -6335.5419            28.7073           130.7781            74.9536  
+    ##             delwt            fincome         fraceBlack         fraceOther  
+    ##            4.1007             0.2898            -6.9048           -16.9392  
+    ## fracePuerto Rican         fraceWhite            gaweeks            malform  
+    ##          -68.2323           -21.2361            11.5494             9.7650  
+    ##          menarche            mheight             momage         mraceBlack  
+    ##           -3.5508             9.7874             0.7593           -60.0488  
+    ## mracePuerto Rican         mraceWhite             parity            pnumlbw  
+    ##           34.9079            91.3866            95.5411                 NA  
+    ##           pnumsga              ppbmi               ppwt             smoken  
+    ##                NA             4.3538            -3.4716            -4.8544  
+    ##            wtgain  
+    ##                NA
+
+``` r
+summary(full_model) |> 
+  broom::tidy() |> 
+  select(term, estimate, p.value)
+```
+
+    ## # A tibble: 22 × 3
+    ##    term               estimate   p.value
+    ##    <chr>                 <dbl>     <dbl>
+    ##  1 (Intercept)       -6336.    1.23e- 21
+    ##  2 babysex2             28.7   7.02e-  4
+    ##  3 bhead               131.    2.16e-271
+    ##  4 blength              75.0   1.75e-261
+    ##  5 delwt                 4.10  5.62e- 25
+    ##  6 fincome               0.290 1.07e-  1
+    ##  7 fraceBlack           -6.90  9.30e-  1
+    ##  8 fraceOther          -16.9   8.62e-  1
+    ##  9 fracePuerto Rican   -68.2   3.85e-  1
+    ## 10 fraceWhite          -21.2   7.59e-  1
+    ## # ℹ 12 more rows
 
 ### proposed model
 
 ``` r
-stepwise_model = 
-  lm(bwt~babysex+bhead+blength+delwt+fincome+gaweeks+ppwt+smoken, data=birthweight) |> 
-  broom::tidy() |> 
-  select(term, estimate, p.value) |> 
-  knitr::kable()
-
+stepwise_model = lm(bwt~bhead + blength + delwt + fincome + gaweeks + ppwt + smoken, data = birthweight)
 stepwise_model
 ```
 
-| term        |     estimate |   p.value |
-|:------------|-------------:|----------:|
-| (Intercept) | -6164.627135 | 0.0000000 |
-| babysex2    |    31.484968 | 0.0002757 |
-| bhead       |   134.615583 | 0.0000000 |
-| blength     |    78.311912 | 0.0000000 |
-| delwt       |     4.006749 | 0.0000000 |
-| fincome     |     1.302863 | 0.0000000 |
-| gaweeks     |    12.793074 | 0.0000000 |
-| ppwt        |    -2.402769 | 0.0000000 |
-| smoken      |    -2.574802 | 0.0000088 |
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ bhead + blength + delwt + fincome + gaweeks + 
+    ##     ppwt + smoken, data = birthweight)
+    ## 
+    ## Coefficients:
+    ## (Intercept)        bhead      blength        delwt      fincome      gaweeks  
+    ##   -6100.210      132.691       78.175        4.002        1.299       13.317  
+    ##        ppwt       smoken  
+    ##      -2.378       -2.669
+
+``` r
+summary(stepwise_model) |> 
+  broom::tidy() |> 
+  select(term, estimate, p.value)
+```
+
+    ## # A tibble: 8 × 3
+    ##   term        estimate   p.value
+    ##   <chr>          <dbl>     <dbl>
+    ## 1 (Intercept) -6100.   0        
+    ## 2 bhead         133.   4.45e-275
+    ## 3 blength        78.2  3.02e-273
+    ## 4 delwt           4.00 3.00e- 23
+    ## 5 fincome         1.30 5.57e- 15
+    ## 6 gaweeks        13.3  4.28e- 19
+    ## 7 ppwt           -2.38 4.14e-  8
+    ## 8 smoken         -2.67 4.12e-  6
 
 **Comments:** Variables for the stepwise model were chosen based on
 eliminating those with large p-value scores –though there is not set
@@ -344,13 +364,18 @@ that a baby’s birthweight is related to family monthly income, the
 baby’s measurements, gestational age in weeks, mother’s prepregnancy
 weight and whether the mother smoked during pregnancy.
 
+### predictions vs. residuals plot
+
 ``` r
-#birthweight |>
-#  modelr::add_residuals(full_model) |>
-#  modelr::add_predictions(full_model) |> 
-#  ggplot(aes(x = resid, y = pred)) + 
-#  geom_point()
+birthweight |>
+  modelr::add_residuals(stepwise_model) |>
+  modelr::add_predictions(stepwise_model) |> 
+  ggplot(aes(x = pred, y = resid)) + 
+  geom_point(alpha = 0.5) + 
+  labs(x = "Predicted values", y = "Residuals", title = "Predicted Values vs. Residuals")
 ```
+
+![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
 Compare your model to two others:
 
@@ -362,7 +387,3 @@ Compare your model to two others:
 
 Make this comparison in terms of the cross-validated prediction error;
 use crossv_mc and functions in purrr as appropriate.
-
-Note that although we expect your model to be reasonable, model building
-itself is not a main idea of the course and we don’t necessarily expect
-your model to be “optimal”.
