Finished problem 3 with graphs and comments on each

--- a/p8105_hw6_wz2630.md
+++ b/p8105_hw6_wz2630.md
@@ -34,7 +34,19 @@ library(tidyverse)
 ``` r
 library(modelr)
 library(knitr)
+library(purrr)
+library(mgcv)
 ```
+
+    ## Loading required package: nlme
+    ## 
+    ## Attaching package: 'nlme'
+    ## 
+    ## The following object is masked from 'package:dplyr':
+    ## 
+    ##     collapse
+    ## 
+    ## This is mgcv 1.9-0. For overview type 'help("mgcv-package")'.
 
 # Problem 1
 
@@ -243,7 +255,7 @@ effects of several variables on a child’s birthweight.
 Load and clean the data for regression analysis (i.e. convert numeric to
 factor where appropriate, check for missing data, etc.).
 
-## load and clean dataset
+### load and clean dataset
 
 ``` r
 birthweight = 
@@ -376,6 +388,13 @@ birthweight |>
 ```
 
 ![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+**Comments:**
+
+Observed from the “Predicted Values vs. Residuals” scatterplot, our
+proposed model’s residuals are mainly scattered close to y = 0, which
+suggests linearity.
+
+## cross validation
 
 Compare your model to two others:
 
@@ -387,3 +406,57 @@ Compare your model to two others:
 
 Make this comparison in terms of the cross-validated prediction error;
 use crossv_mc and functions in purrr as appropriate.
+
+``` r
+set.seed(1)
+
+bwt_df =
+  crossv_mc(birthweight, 100) |> 
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble))
+
+# mutate + map & map2 to fit models to training data and obtain corresponding RMSEs for the testing data
+bwt_df = bwt_df |> 
+  mutate(
+    stepwise_model = map(train, ~ lm(bwt ~ bhead + blength + delwt + fincome + gaweeks + ppwt + smoken, data = .)),
+    comparison_model1 = map(train, ~ lm(bwt ~ blength + gaweeks, data = .)),
+    comparison_model2 = map(train, ~ lm(bwt ~ bhead + blength + babysex + bhead*blength + bhead*babysex + blength*babysex + bhead*blength*babysex, data = .))
+  ) |> 
+  mutate(
+    rmse_stepwise = map2_dbl(stepwise_model, test, ~ rmse(model = .x, data = .y)),
+    rmse_comparison_model1 = map2_dbl(comparison_model1, test, ~ rmse(model = .x, data = .y)),
+    rmse_comparison_model2 = map2_dbl(comparison_model2, test, ~ rmse(model = .x, data = .y))
+  )
+```
+
+``` r
+# distribution of RMSE values for each candidate model
+
+bwt_df |> 
+  select(starts_with("rmse")) |> 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") |> 
+  mutate(model = fct_inorder(model)) |> 
+  ggplot(aes(x = model, y = rmse)) + 
+  geom_violin() + 
+  labs(x = "Model Candidates", 
+       y = "Root Mean Square Error (rmse)", 
+       title = "Distribution of RMSE Values for Each Candidate Model")
+```
+
+![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+**Comments:**
+
+My proposed stepwise model appears to have the smallest RMSE. (RMSE
+provides a measure of the typical size of the errors the model makes in
+its predictions. A lower RMSE indicates a better fit of the model to the
+data.) Comparison model 1 (blength + gaweeks) is too simple and is not a
+good predictive model for baby birthweight. Comparison model 2 (bhead +
+blength + babysex with up to 3-way interaction) is comparable to my
+proposed model. Both models have apparent overlap in distributions
+according to the graph. However, the stepwise one has the lowest RMSE
+and is the model I would choose of the 3.
