--- a/p8105_hw6_wz2630.md
+++ b/p8105_hw6_wz2630.md
@@ -1,4 +1,4 @@
-p8105_hw6_wz2630
+P8105 homework 6: linear models, cross validation, bootstrapping
 ================
 
 ``` r
@@ -388,6 +388,7 @@ birthweight |>
 ```
 
 ![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
 **Comments:**
 
 Observed from the “Predicted Values vs. Residuals” scatterplot, our
@@ -449,6 +450,7 @@ bwt_df |>
 ```
 
 ![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+
 **Comments:**
 
 My proposed stepwise model appears to have the smallest RMSE. (RMSE
