--- a/p8105_hw6_wz2630.md
+++ b/p8105_hw6_wz2630.md
@@ -172,39 +172,39 @@ pivot_bootstrap_results =
 # Plot the distribution of your estimates
 pivot_bootstrap_results |> 
   ggplot(aes(x = r.squared)) + 
-  geom_histogram()
+  geom_histogram() + 
+  labs(x = "r-squared", y = "Count", title = "Distribution of r-squared")
 ```
 
     ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 
 ![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
 
+**Comments:** The distribution of r-squared estimates are approximately
+normal.
+
 ``` r
 pivot_bootstrap_results |> 
   ggplot(aes(x = quantity2)) + 
   geom_histogram() + 
-  labs(x = "log(beta_hat1*beta_hat2)")
+  labs(x = "log(beta_hat1*beta_hat2)", y = "Count", title = "Distribution of log(beta_hat1*beta_hat2)")
 ```
 
     ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 
     ## Warning: Removed 3361 rows containing non-finite values (`stat_bin()`).
 
-![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-4-2.png)<!-- -->
+![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
 
 **Comments:**
-
-The distribution of r-squared estimates are approximately normal. The
-r-squared values range from 0.86 to 1 and counts range from 0 to about
-490.
 
 The distribution of log(beta_hat1xbeta_hat2) is left skewed. There seems
 to be outliers based on the histogram.
 
-- Applying log(tmin \* prcp) produced NaNs because log cannot be applied
-  to ≤ 0; therefore, I have to explicitly apply to only positive values.
-  Note: there are `sum(is.na(pivot_bootstrap_results[["quantity2"]]))`
-  quantity2 with negative values that we cannot take log of.
+Applying log(tmin \* prcp) produced NaNs because log cannot be applied
+to ≤ 0; therefore, I have to explicitly apply to only positive values.
+Note: there are `sum(is.na(pivot_bootstrap_results[["quantity2"]]))` =
+3361 quantity2 with negative values that we cannot take log of.
 
 - log(beta_hat1\*beta_hat2) = quantity2
 
@@ -371,10 +371,10 @@ summary(stepwise_model) |>
 
 **Comments:** Variables for the stepwise model were chosen based on
 eliminating those with large p-value scores –though there is not set
-definition, I used those with p-value \< 0.20. It is also reasonable
-that a baby’s birthweight is related to family monthly income, the
-baby’s measurements, gestational age in weeks, mother’s prepregnancy
-weight and whether the mother smoked during pregnancy.
+definition/requirement, I used those with p-value \< 0.20. It is also
+reasonable that a baby’s birthweight is related to family monthly
+income, the baby’s measurements, gestational age in weeks, mother’s
+prepregnancy weight and mother’s smoking status during pregnancy.
 
 ### predictions vs. residuals plot
 
@@ -387,7 +387,7 @@ birthweight |>
   labs(x = "Predicted values", y = "Residuals", title = "Predicted Values vs. Residuals")
 ```
 
-![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
 **Comments:**
 
@@ -449,7 +449,7 @@ bwt_df |>
        title = "Distribution of RMSE Values for Each Candidate Model")
 ```
 
-![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+![](p8105_hw6_wz2630_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
 
 **Comments:**
 
@@ -457,8 +457,9 @@ My proposed stepwise model appears to have the smallest RMSE. (RMSE
 provides a measure of the typical size of the errors the model makes in
 its predictions. A lower RMSE indicates a better fit of the model to the
 data.) Comparison model 1 (blength + gaweeks) is too simple and is not a
-good predictive model for baby birthweight. Comparison model 2 (bhead +
-blength + babysex with up to 3-way interaction) is comparable to my
-proposed model. Both models have apparent overlap in distributions
-according to the graph. However, the stepwise one has the lowest RMSE
-and is the model I would choose of the 3.
+good predictive model for baby birthweight. It also has the highest RMSE
+(not preferrable). Comparison model 2 (bhead + blength + babysex with up
+to 3-way interaction) is comparable to my proposed model. Both models
+have apparent overlap in distributions according to the graph. However,
+the stepwise one has the lowest RMSE and is the model I would choose of
+the 3.
